--- a/index.Rmd
+++ b/index.Rmd
@@ -14,31 +14,31 @@ output:
 
 # About Me
 
-I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo (some people prefer SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin-Madison](https://journalism.wisc.edu). 
+I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo (SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin-Madison](https://journalism.wisc.edu). 
 
 # Research 
 
-I study the processes and outcomes of (mostly political) communication, with a particular emphasis on social media. Through my research program, I seek to answer the following three questions.
+I study the processes and outcomes of (mostly political) communication, with an emphasis on social media. My research revolves around three fundamental questions:
 
-+ How do individuals express themselves and interact with each other on social media? 
-+ How do different social media platforms form an ecosystem and relate to one another in terms of information flow? 
++ How do individuals express themselves and engage with one another on social media platforms?
++ How do various social media platforms relate to one another in terms of information flow? 
 + What are the broader implications of communication and interaction on social media for journalism and civic life? 
 
-With these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
+By pursuing these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
 
 <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
 
-The methods I use in my research are primarily computational. For my research, I usually collect social media data, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection through various clustering techniques, and run time series modeling. In addition to Twitter, I have expanded my research to other platforms such as Facebook, YouTube, Reddit, Truth Social, and Parler etc. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. 
+The methods I use in my research are primarily computational. My research often entails several key steps: collecting data from social media platforms (e.g., Twitter, YouTube, and Truth Social), conducting automated text analysis using unsupervised and supervised machine learning, performing community detection through various clustering techniques, and running time series modeling. Besides using existing computational methods, I actively collaborate with colleagues from the fields of statistics and computer science to develop innovative approaches specifically tailored for communication research.
 
 # Teaching
 
-I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching a variety of courses, including research methods, communication theory, introduction to mass communication, and social media and society at undergraduate and graduate levels. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually update and refine my teaching.
+I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching an array of courses at undergraduate and graduate levels, including research methods, communication theory, introduction to mass communication, and social media and society. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually update and enhance my teaching.
 
 # Miscellaneous 
 
 Apart from doing research and teaching, I like playing with my little one (and his friends), traveling, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as time goes by I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
 
-My dissertation won an award from the Political Communication Division of the American Political Science Association (APSA) :) [A summary](files/A Network Approach Summary.pdf) is available.
+My dissertation won an award from the Political Communication Division of the American Political Science Association (APSA). [A summary](files/A Network Approach Summary.pdf) is available.
 
 I co-founded [the Communication and Emerging Media (CEM) lab](https://cemlab.github.io/) with [Jiyoun Suk](https://comm.uconn.edu/person/jiyoun-suk/) and [Nojin Kwak](https://scholar.google.com/citations?user=Wp2p7ksAAAAJ&hl=en). We have been doing cool research in the basement of Baldy and on Zoom. Check out our recent publications and on-going work on our lab site.
 
