--- a/index.Rmd
+++ b/index.Rmd
@@ -14,17 +14,15 @@ output:
 
 # About Me
 
-I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo (SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin-Madison](https://journalism.wisc.edu). 
+I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo (SUNY-Buffalo). I graduated with a Ph.D. in communication from the [School of Journalism & Mass Communication at the University of Wisconsin-Madison](https://journalism.wisc.edu). 
 
 # Research 
 
-I study the processes and outcomes of (mostly political) communication, with an emphasis on social media. My research revolves around three fundamental questions:
+I study social media, focusing on how social media shapes the information ecology in the context of political communication processes and outcomes. My approach considers both the technological/structural and user aspects of social media. Specifically, my research program is driven by three interlinked questions:
 
-+ How do individuals express themselves and engage with one another on social media platforms?
-+ How do various social media platforms relate to one another in terms of information flow? 
-+ What are the broader implications of communication and interaction on social media for journalism and civic life? 
-
-By pursuing these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
++ How do social media platforms facilitate communication and interaction on social media? 
++ How do platforms relate to one another within the social media ecosystem? 
++ What are the broader implications of the current information ecology for our mediated world and public life? 
 
 <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
 
@@ -32,15 +30,17 @@ The methods I use in my research are primarily computational. My research often 
 
 # Teaching
 
-I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching an array of courses at undergraduate and graduate levels, including research methods, communication theory, introduction to mass communication, and social media and society. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually update and enhance my teaching.
+I find immense joy in helping students develop their skills and knowledge. At UB, I have had the privilege of teaching an array of courses at undergraduate and graduate levels. These include subjects such as social media and society, introduction to mass communication, research methods, and communication theory. The heartfelt notes of gratitude and appreciation from my students are a continuous source of motivation, inspiring me to consistently enhance my teaching methods.
+
+# Research Lab
+
+In my research lab, [the Communication and Emerging Media (CEM) lab](https://cemlab.github.io/), I lead graduate and undergraduate students at UB and beyond to work on my research projects and help them launch their own projects. We have been doing cool research in the basement of Baldy and on Zoom. Check out our recent publications and on-going work on our lab website.
 
 # Miscellaneous 
 
-Apart from doing research and teaching, I like playing with my little one (and his friends), traveling, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as time goes by I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
+Beyond my passion for research and teaching, I like playing with my little one (and his friends), traveling, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as time goes by I find myself gravitating toward the world of podcasts, something I enjoy listening to during my daily commute. I'm continually on the lookout for podcast recommendations!
 
 My dissertation won an award from the Political Communication Division of the American Political Science Association (APSA). [A summary](files/A Network Approach Summary.pdf) is available.
 
-I co-founded [the Communication and Emerging Media (CEM) lab](https://cemlab.github.io/) with [Jiyoun Suk](https://comm.uconn.edu/person/jiyoun-suk/) and [Nojin Kwak](https://scholar.google.com/citations?user=Wp2p7ksAAAAJ&hl=en). We have been doing cool research in the basement of Baldy and on Zoom. Check out our recent publications and on-going work on our lab site.
-
-My full CV is available [here](files/ZHANG_CV_Mar23.pdf).
+My full CV is available [here](files/Yini ZHANG_Oct23.pdf).
 
