--- a/index.Rmd
+++ b/index.Rmd
@@ -18,11 +18,11 @@ I'm an assistant professor in the [Department of Communication](http://www.buffa
 
 # Research 
 
-I study social media, focusing on how it affects the media system and political communication. My approach considers both the technological/structural and user aspects of social media. Specifically, my research program is driven by three interlinked questions:
+My research is driven by one core question: How do certain issues and actors capture attention and wield influence in an era of information overload? My approach considers both the technological/structural and user aspects of media, including social media and AI. Specifically, my research program is driven by three interlinked questions:
 
-+ How do social media platforms facilitate communication and interaction on social media? 
-+ How do users shape the social media system and how do they play a role in the larger media system? 
-+ What are the broader implications of the current media system for our mediated world and public life? 
++ How attention coalesces around key actors on social media? 
++ How attention and information flow across the larger media ecosystem? 
++ What are the broader implications of the current media ecosystem for public life? 
 
 <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
 
@@ -42,5 +42,5 @@ Beyond my passion for research and teaching, I like playing with my little one (
 
 My dissertation won an award from the Political Communication Division of the American Political Science Association (APSA). [A summary](files/A Network Approach Summary.pdf) is available.
 
-My full CV is available [here](files/Yini_ZHANG_Sep_2024.pdf).
+My full CV is available [here](files/Yini_ZHANG_Sep_2025.pdf).
 
